@@ -12,7 +12,9 @@
   [% INCLUDE navbar_categories.tt %]
   [% INCLUDE navbar_locales.tt %]
  </div>
+[% UNLESS empty_node %]
   [% INCLUDE navbar_revision_info.tt %]
+[% END %]
 
 </div>
 </div>
