@@ -5,6 +5,7 @@ More detailed changelogs can be found at
 
 0.65
         Fix some more broken POD and add POD unit test (#268)
+        Don't display revision info for nodes that don't exist (#193)
 
 0.64    23 February 2009
         Correctly specify all build_requires (#245)
